SERVER-100072 Assert shard key is the same when forceRedistribution passed to reshardCollection (#34686)

GitOrigin-RevId: c3efe38c902eb66274623f1ffaf4babb513e7292